<resources>
    <string name="app_name">Spendings</string>

    <!--Home screen-->
    <string name="home_label_recent">Recent</string>
    <string name="home_label_add">Add</string>
    <string name="home_period_arrow">&#x25BE;</string>
    <string name="home_empty_state_period_spendings">You haven\'t spent a penny, happy?</string>
    <string name="home_empty_state_recent_title">Nothing!</string>
    <string name="home_empty_state_recent_subtitle">Your transaction list is empty.</string>
    <!--end of Home screen-->

    <!--Import screen-->
    <string name="title_activity_import">Import</string>
    <string name="import_button_next">Step %d of %d</string>
    <string name="import_button_save">Save</string>

    <string name="import_step_source_title">Select a source file</string>
    <string name="import_step_source_revolut">Revolut</string>
    <string name="import_step_currency_title">Choose currency</string>
    <string name="import_step_list_title">Set categories</string>
    <string name="import_label_set_category">Set category</string>
    <string name="import_label_currency">Currency</string>
    <!--end Import screen-->


    <!--Transaction screen-->
    <string name="title_activity_transaction">Transaction</string>
    <string name="transaction_field_default_title">Transaction</string>
    <string name="transaction_field_default_category">Other</string>
    <string name="transaction_field_default_value">0,00</string>
    <string name="transaction_field_hint_title">Name</string>
    <string name="transaction_field_hint_value">Value</string>
    <string name="transaction_field_hint_date">Date</string>
    <string name="transaction_field_hint_category">Category</string>
    <string name="transaction_field_hint_currency">Currency</string>
    <string name="transaction_actions_button_delete">Delete</string>
    <string name="transaction_actions_button_save">Save</string>
    <string name="transaction_fields_category">Category</string>
    <string name="transaction_fields_currency">Currency</string>
    <string name="transaction_na_more">More</string>
    <!--end of Transaction screen-->

</resources>
