<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transactionBackground"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/transaction_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_field_hint_title"
                android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
                android:privateImeOptions="nm"
                android:text="@string/transaction_field_default_title" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/transaction_fields_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/transaction_field_hint_date"
                tools:text="Aug, 28 2017" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_field_hint_category"
                android:text="@string/transaction_field_default_category" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/transaction_field_hint_value"
                    android:inputType="numberSigned"
                    android:text="@string/transaction_field_default_value"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/transaction_fields_currency_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/transaction_field_hint_currency"
                    android:text="£"
                    android:textSize="25sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transaction_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <Button
            android:id="@+id/transaction_delete"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="2dp"
            android:layout_weight="0.3"
            android:background="@color/colorText"
            android:text="@string/transaction_button_delete"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/transaction_save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_weight="0.6"
            android:background="@drawable/transaction_button_save"
            android:enabled="true"
            android:text="@string/transaction_button_save"
            android:textColor="@color/colorText"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/transaction_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="8dp"
            android:animateLayoutChanges="true" />
    </FrameLayout>

</LinearLayout>